@@ -36,7 +36,7 @@ if (PHP_ONPHP != "no") {
 	ADD_SOURCES(
 		"ext/onphp/src/core/OSQL",
 		
-		"Castable.c DBField.c DBValue.c DialectString.c FieldTable.c \
+		"Castable.c DBBinary.c DBField.c DBValue.c DialectString.c FieldTable.c \
 		SelectField.c SQLTableName.c Query.c QueryIdentification.c",
 		
 		"onphp"
